[tool.poetry]
name = "comma-lisp"
version = "0.1.0"
description = "a small evaluator for a lisp like python syntax"
authors = ["Abhinav Omprakash"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
Sphinx = "^4.1.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
